<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AV Phone Demo</string>
    
    <string name="home_tab">Home</string>
    <string name="run_tab">Send Data</string>
    <string name="configure_tab">Configure</string>
    
    <string name="action_settings">Settings</string>
    <string name="started_since">Service started since</string>
    <string name="phone_id">Phone ID</string>
    <string name="signal_strength">Signal strength</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="operator">Operator</string>
    <string name="network_type">Network type</string>
    <string name="imei">IMEI</string>
    <string name="battery">Battery level</string>
    <string name="bytes_sent">Bytes sent</string>
    <string name="bytes_received">Bytes received</string>
    <string name="active_wifi">Wi-Fi</string>
    <string name="running_apps">Running applications</string>
    <string name="memory_usage">Memory usage</string>
    <string name="android_version">Android version</string>
    <string name="no_value">-</string>
    <string name="update_data">Update data</string>

    <!-- Notifications -->
    <string name="notif_title">Phone monitoring</string>
    <string name="notif_desc">Pushing data to AirVantage</string>
    <string name="notif_new_message">Message!</string>

    <!-- Preferences -->
    <string name="pref_password">MQTT Password</string>
    <string name="pref_server">AirVantage server</string>
    <string name="pref_server_na">NA</string>
    <string name="pref_server_na_value">na.airvantage.net</string>
    <string name="pref_server_eu">EU</string>
    <string name="pref_server_eu_value">eu.airvantage.net</string>
    <string name="pref_server_custom">Custom</string>
    <string name="pref_server_custom_value">get.some.io</string>
    
    <string name="pref_custom1_label_key">pref_data_custom1</string>
    <string name="pref_custom1_label">Custom Data 1 (Up)</string>
    <string name="pref_custom1_label_default">A4 pages printed</string>
    
    <string name="pref_custom2_label_key">pref_data_custom2</string>
    <string name="pref_custom2_label">Custom Data 2 (Up)</string>
    <string name="pref_custom2_label_default">A6 pages printed</string>
    
    <string name="pref_custom3_label_key">pref_data_custom3</string>
    <string name="pref_custom3_label">Custom Data 3 (Down)</string>
    <string name="pref_custom3_label_default">Black ink level</string>
    
    <string name="pref_custom4_label_key">pref_data_custom4</string>
    <string name="pref_custom4_label">Custom Data 4 (Down)</string>
    <string name="pref_custom4_label_default">Color ink level</string>
    
    <string name="pref_custom5_label_key">pref_data_custom5</string>
    <string name="pref_custom5_label">Custom Data 5 (String)</string>
    <string name="pref_custom5_label_default">Black Cartridge SN</string>
    
    <string name="pref_custom6_label_key">pref_data_custom6</string>
    <string name="pref_custom6_label">Custom Data 6 (String)</string>
    <string name="pref_custom6_label_default">Color Cartridge SN</string>
    
    <string name="pref_period">Push data period</string>
    
    <string name="pref_client_id">Client ID</string>
    
    <!-- default values -->
    <string name="pref_password_default">12345</string>
    
    <string name="pref_period_default">2</string>
    <string name="invalid_prefs">Invalid parameters</string>
    <string name="prefs_missing">Some application parameters are missing</string>

    <!-- Home fragment -->
    
    <string name="home_sw_logo_alt">Sierra Wireless - AV Phone</string>
    
    <string name="logged_on_na">You are currently logged on AirVantage NA</string>
    <string name="logged_on_eu">You are currently logged on AirVantage EU </string>
    <string name="logged_on_custom">You are currently logged on %1$s</string>
    
    <string name="logout">Logout</string>
    
    <string name="home_title"><h1><b>Welcome to AV Phone</b></h1></string>

    <string name="home_image_alt" />
    
    <string name="home_simulate_message"><b>Simulate</b> any object with your phone.\nClick on menu\nClick on simulated object to go on simulation page</string>
    
    <string name="home_login_message_str"> <![CDATA[<b>Create a simulated object</b> automatically in your <font color="#E53B30">AirVantage</font> account]]></string>

    <string name="home_login">Login to your AirVantage account</string>
    
    <string name="auth_login_na">America</string>
    <string name="auth_login_eu">Europe</string>
    <string name="auth_login_custom">Other</string>
    
    <!-- Synchronization steps -->
    <string name="progress_syncing">Synchronizing with AirVantage</string>
    <string name="progress_syncing_message">
         <![CDATA[
        We are synchronizing your phone with AirVantage.<br/>
        Please wait.<br/>
        (%1$s)
        ]]>
    </string>
    
    
    <string name="progress_starting">Starting&#8230;</string>
    <string name="progress_checking_rights">Checking permissions</string>
    <string name="progress_checking_application">Checking application</string>
    <string name="progress_creating_application">Creating application</string>
    <string name="progress_checking_system">Checking system</string>
    <string name="progress_creating_system">Creating system</string>
    <string name="progress_updating_system">Updating system</string>
    <string name="progress_checking_alert_rule">Checking alert rule</string>
    <string name="progress_creating_alert_rule">Creating alert rule</string>
    <string name="progress_getting_alert_state">Getting alert state</string>
    <string name="progress_updating_alert_rule">Updating alert rule</string>
    <string name="progress_updating_application">Updating application</string>
    <string name="progress_adding_application">Adding application</string>
    <string name="progress_done">Done</string>
    
    <string name="sync_error_system_exists">Error : A system already exists with this serial number (maybe in another company).</string>
    <string name="sync_error_gateway_exists">Error : A gateway already exists with this serial number (maybe in another company).</string>
    <string name="sync_error_app_exists">Error : An application with type %1$s already exists (maybe in another company).</string>
    <string name="sync_error_too_many_rules">Error : There are too many alert rules registered in your company.</string>
    <string name="sync_error_no_right_create_application">Error : You don\'t have the right to create application. Contact your administrator.</string>
    
    <string name="sync_error_no_right_create_system">Error : You don\'t have the right to create a system. Contact your administrator.</string>
    <string name="sync_error_no_right_create_alert_rule">Error : You don\'t have the right to create an alert rule. Contact your administrator.</string>
    <string name="sync_error_no_right_update_app">Error : You don\'t have the right to update an application. Contact your administrator</string>
    <string name="sync_error_no_right_update_system">Error : You don\'t have the right to update a system. Contact your administrator.</string>
    <string name="sync_error_forbidden">Error : You are not allowed to %1$s on URL %2$s.</string>
    <string name="sync_error_no_user_data">Error : Unable to get user data.</string>
    <string name="sync_error_unexpected">Error : Unexpected error (%1$s).</string>
    
    <string name="sync_success">Synchronized with AirVantage.</string>
    
    <!-- Run fragment -->
    <string name="run_info_message">Your phone is registered on AirVantage as gateway %1$s.</string>
    <string name="run_info_message_link">
<![CDATA[
        Your phone is registered on AirVantage as  <a href="%1$s">%2$s</a>.
        ]]>
    </string>
    <string name="run_send_data">Send Data</string>
    <string name="run_activate_alarm">Raise/Cancel Alarm</string>
    
    
    <!-- Configure fragment -->
    <string name="configure_info_message">
         <![CDATA[
         You can customize the labels of the data sent by your phone.
         Click \'Save\' for the changes to take effect.
         ]]>
    </string>
    
    <string name="toggle_to_start">Toggle \'Send Data\' to start sending data to AirVantage.</string>
    
    <string name="configure_save">Save</string>
    
    <!-- Common -->
    <string name="auth_not_enough_rights">You don\'t have all the permissions on AirVantage to use AV Phone. Please contact your administrator.</string>
    <string name="auth_missing_rights">You are missing rights to :</string>
    
    <string name="entities_systems_view">View systems</string>
    <string name="entities_systems_create">Create a system</string>
    <string name="entities_systems_edit">Edit a system</string>
    <string name="entities_applications_view">View applications</string>
    <string name="entities_applications_create">Create an application</string>
    <string name="entities_applications_edit">Edit an application</string>
    <string name="entities_alerts_rule_view">View alert rules</string>
    <string name="entities_alerts_rule_create_edit_delete">Create and edit an alert rule</string>
    <string name="drawer_open">AV Phone navigation is available</string>
    <string name="drawer_close">AV Phone navigation is no longer available</string>
    <string name="welcome">Welcome</string>
    <string name="add_new_object">Add new system</string>
    <string name="add_new_data">Add new data</string>
    <string name="progress_deleting_alert_rule">Deleting alert rule</string>
    <string name="progress_deleting_system">Deleting system</string>
    <string name="menuicon">menuicon</string>
    <string name="menu_edit">Edit</string>
    <string name="delete_object_menu">delete</string>
    <string name="none">none</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="send">Send</string>
    <string name="phone">Phone</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="reaise">Raise</string>
    <string name="unit">Unit</string>
    <string name="default_value_nfor_random_min_max_value">Default Value. For random mode enter: min,max value.</string>
    <string name="simulation_type">Simulation Type</string>
    <string name="objectSaveConfigure">An object name must be specified before to save it.</string>
    <string name="alert">Alert</string>
    <string name="nameBeforeAddObjectConfigure">An object name must be specified before to add data.</string>
    <string name="nameOnbjectDataEmpty">An object data name must be specified before to save it.</string>
    <string name="InvalidRandomDefaultComma">Mode is RANDOM, but the default entry is not valid (min,max)</string>
    <string name="InvalidDefaultUpDown">Mode is UP or DOWN, but the default entry is not a number.</string>
    <string name="MinMaxRandomDataObject">Mode is RANDOM, but the default entry is not valid (min,max)\n.Min and max must be numbers.</string>
    <string name="resync_all">Resync All</string>
    <string name="alarm">Alarm</string>

</resources>