<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/request_authorization"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/auth_btn_eu"
        android:paddingTop="10dp" >

        <RadioButton
            android:id="@+id/auth_btn_na"
            android:text="@string/auth_login_na"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:buttonTint="@color/sierrared" />

        <RadioButton
            android:id="@+id/auth_btn_eu"
            android:text="@string/auth_login_eu"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:buttonTint="@color/sierrared" />

        <RadioButton
            android:id="@+id/auth_btn_custom"
            android:text="@string/auth_login_custom"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:buttonTint="@color/sierrared" />

    </RadioGroup>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

    <WebView
        android:id="@+id/authorization_webview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>