<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:divider="?android:dividerHorizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:showDividers="middle"
    tools:context=".activity.MainActivity" >

    <LinearLayout
        android:id="@+id/action_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/run_info_message"
            style="@style/InfoMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/run_error_message"
            style="@style/ErrorMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="115dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/ItemLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/run_send_data" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/service_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_gravity="center"
                    android:textOff="OFF"
                    android:textOn="ON"
                    android:theme="@style/Switch" />

                <TextView
                    android:id="@+id/service_log"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/ItemLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/run_activate_alarm" />

                <Button
                    android:id="@+id/alarm_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/grey_4"
                    android:baselineAligned="false"
                    android:text="Send"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/alarm_log"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/toggle_to_start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/toggle_to_start"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/started_since"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="12sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/phone"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="85dp"
                    android:layout_weight="1"
                    android:background="@color/grey_4"
                    android:text="Phone"
                    app:layout_constraintBaseline_toBaselineOf="@+id/obj"
                    app:layout_constraintEnd_toStartOf="@+id/obj"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/obj"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="91dp"
                    android:layout_weight="1"
                    android:background="@color/grey_4"
                    android:text="Object"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/phone"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/phoneListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

    <ListView
        android:id="@+id/objectLstView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</LinearLayout>